--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.12", features = ["derive"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
