--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.12", features = ["derive"] }
+colored = "2.0.4"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
