--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "binarygrep"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 license = "GPL-3.0-only"
-description = "grep but for binary data"
+description = "Search byte patterns in binary data"
 repository = "https://github.com/ddast/binarygrep"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
